fixed misaligned options

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
 	touch-action: manipulation;
 	-ms-touch-action: manipulation;
 }
+body {
+	margin: 0;
+	padding: 8px;
+}
 
 .matrizen-container {
 	width: 15vw;
@@ -14,6 +18,8 @@
 		"el1 el2 el3"
 		"el4 el5 el6"
 		"el7 el8 el9";
+	align-items: center;
+	justify-items: center;
 }
 .optionen-container {
 	width: 20vw;
@@ -33,6 +39,8 @@
 		"cb13 cb14 cb15 cb16"
 		"el17 el18 el19 el20"
 		"cb17 cb18 cb19 cb20";
+	align-items: center;
+	justify-items: center;
 }
 .buttons-container {
 	width: 200px;
@@ -385,7 +393,7 @@ button:active {
 	justify-content: center;
 	flex-direction: column;
 	background-color: rgb(140, 188, 107);
-	width: 100vw;
+	width: 100%;
 	height: 30vh;
 	margin: 13vh 0vh auto 0vh;
 }
@@ -399,7 +407,7 @@ button:active {
 	justify-content: center;
 	flex-direction: column;
 	background-color: rgb(217, 217, 217);
-	width: 100vw;
+	width: 100%;
 	height: 7.3vh;
 }
 
